css/style.css
body {
    color: black;
    /* font-family: 'DynaPuff'; */
    /* font-family: 'Titan One'; */
    font-family: 'Roboto Condensed';
    font-weight: 300;
    font-size: 20px;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

body>header {
    background-color: #777877;
}

body>main {
    padding: 100px !important;
}

a {
    text-decoration: none;
}

ol,
ul {
    list-style: none;
}

.navbar-nav {
    align-items: center;
    /* Add this line */
}

.navbar-nav h1,
.navbar-nav h2 {
    margin: 0;
    padding: 0;
    line-height: inherit;
    /* display: inline-block;  */
    vertical-align: middle;
}

.homepage-category-image {
    width: 300px;
    /* Set the desired width */
    /* height: 200px; */
    /* Set the desired height */
    object-fit: cover;
    /* Crop the image to fit within the box */
    margin: 0 auto;
    /* Center the image horizontally */
}

.article-image {
    width: 100%;
    /* Ensure images take up the full width of the card */
    height: 300px;
    /* Fixed height */
    object-fit: cover;
    /* Crops the image to fit within the width and height */
}

.card {
    border-radius: 10px;
    /* Rounded corners for the card */
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    /* Adding a subtle shadow */
}

.card-title {
    font-size: 2.5rem;
    /* Increase size of the order title */
}

.card-body {
    display: flex;
    flex-direction: column;
    /* Stack items vertically */
}

.list-group-item {
    display: flex;
    /* Flex layout for image and text */
    align-items: center;
    /* Center vertically */
    padding: 15px;
    /* Add some padding */
}

.bestseller-image {
    height: 33vh;
    /* Set the height to one-third of the viewport height */
    object-fit: cover;
    /* Ensure the image covers the area without stretching */
    border-radius: 8px;
    /* Optional: rounded corners */
    border: 2px solid #1e2949;
    /* Optional: border around the image */
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

/* The side navigation menu */
.sidenav {
    height: 100%;
    /* 100% Full-height */
    width: 0;
    /* 0 width - change this with JavaScript */
    position: fixed;
    /* Stay in place */
    z-index: 2;
    /* Stay on top */
    top: 0;
    /* Stay at the top */
    left: 0;
    background-color: #1e2949;
    /* Black*/
    overflow-x: hidden;
    /* Disable horizontal scroll */
    padding-top: 60px;
    /* Place content 60px from the top */
    transition: 0.5s;
    /* 0.5 second transition effect to slide in the sidenav */
}

.searchBar {
    width: 100%;
    height: 0;
    position: fixed;
    /* Stay in place */
    z-index: 1;
    /* Stay on top */
    top: 0;
    /* Stay at the top */
    background-color: #1e2949;
    /* Black*/
    overflow-y: hidden;
    /* Disable horizontal scroll */
    transition: 0.5s;
    /* 0.5 second transition effect to slide in the sidenav */
    text-align: center;
    vertical-align: middle;
}

/* The navigation menu links */
.sidenav a {
    padding: 8px 2px 8px 32px;
    text-decoration: none;
    font-size: 25px;
    color: #818181;
    display: block;
    transition: 0.3s;
}

.searchBar form,
.searchBar a {
    margin-top: 5px;
    color: #818181;
    transition: 0.3s;
}

/* When you mouse over the navigation links, change their color */
.sidenav a:hover {
    color: #f1f1f1;
}

/* Position and style the close button (top right corner) */
.sidenav .closebtn {
    position: absolute;
    top: 0;
    right: 25px;
    font-size: 36px;
    margin-left: 50px;
}

.searchBar .closebtn {
    position: absolute;
    top: 0;
    right: 25px;
    font-size: 36px;
}

.clickable {
    cursor: pointer;
}

.sidenav h2 a {
    white-space: nowrap;
    margin-left: 0;
    padding-left: 0;
}


.singleProduct-image {
    width: 100%;
    /* Image takes full width of its container */
    max-width: 300px;
    /* You can increase this value to make the image larger */
    height: auto;
    /* Keep the aspect ratio */
    border-radius: 8px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.card img {
    max-width: 100%;
    height: auto;
}

.carousel-control-prev-icon,
.carousel-control-next-icon {
    filter: invert(1);
}

/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
@media screen and (max-height: 450px) {
    .sidenav {
        padding-top: 15px;
    }

    .sidenav a {
        font-size: 18px;
    }
}

@media screen and (min-width: 768px) {

    .carousel-control-prev {
        left: 20%;
    }

    .carousel-control-next {
        right: 20%;
    }
}

